--- a/index.html
+++ b/index.html
@@ -130,6 +130,37 @@
 
     document.querySelector("form").reset();
   });
+    // Run after the page loads
+window.onload = function () {
+  const form = document.getElementById("reportForm");
+
+  if (form) {
+    form.addEventListener("submit", function (e) {
+      e.preventDefault(); // prevent default URL submission
+
+      const name = document.getElementById("name").value;
+      const item = document.getElementById("item").value;
+      const description = document.getElementById("description").value;
+      const status = document.querySelector('input[name="status"]:checked').value;
+
+      const newItem = { name, item, description, status };
+
+      // Get existing items
+      let items = JSON.parse(localStorage.getItem("lostAndFoundItems")) || [];
+
+      // Add new item
+      items.push(newItem);
+
+      // Save back to localStorage
+      localStorage.setItem("lostAndFoundItems", JSON.stringify(items));
+
+      // Optionally redirect or refresh
+      alert("Item submitted!");
+      window.location.href = "history.html"; // or any page to view data
+    });
+  }
+};
+
 </script>
 
 
