--- a/history.html
+++ b/history.html
@@ -1,69 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Lost and Found History</title>
-  <style>
-    body {
-      font-family: Arial;
-      margin: 20px;
-    }
-    h1 {
-      color: navy;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 20px;
-    }
-    th, td {
-      border: 1px solid gray;
-      padding: 8px;
-      text-align: left;
-    }
-    th {
-      background-color: #f2f2f2;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <title>History - Lost and Found Portal</title>
 </head>
 <body>
-
-  <h1>Lost and Found Item History</h1>
-  <table id="itemsTable">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Item</th>
-        <th>Description</th>
-        <th>Status</th>
-      </tr>
-    </thead>
-    <tbody>
-      <!-- Rows will be added here with JavaScript -->
-    </tbody>
-  </table>
+  <h1>Lost and Found History</h1>
+  <div id="historyContainer"></div>
 
   <script>
-    const items = JSON.parse(localStorage.getItem("lostAndFoundItems")) || [];
-
-    const tableBody = document.querySelector("#itemsTable tbody");
+    const historyContainer = document.getElementById("historyContainer");
+    const items = JSON.parse(localStorage.getItem("lostFoundItems")) || [];
 
     if (items.length === 0) {
-      tableBody.innerHTML = "<tr><td colspan='4'>No items reported yet.</td></tr>";
+      historyContainer.innerHTML = "<p>No data found.</p>";
     } else {
-      items.forEach((item) => {
-        const row = document.createElement("tr");
-
-        row.innerHTML = `
-          <td>${item.name}</td>
-          <td>${item.item}</td>
-          <td>${item.description}</td>
-          <td>${item.status}</td>
+      const table = document.createElement("table");
+      table.border = "1";
+      table.innerHTML = `
+        <tr>
+          <th>Name</th>
+          <th>Item</th>
+          <th>Description</th>
+          <th>Status</th>
+        </tr>
+      `;
+      items.forEach(item => {
+        table.innerHTML += `
+          <tr>
+            <td>${item.name}</td>
+            <td>${item.item}</td>
+            <td>${item.description}</td>
+            <td>${item.status}</td>
+          </tr>
         `;
-
-        tableBody.appendChild(row);
       });
+      historyContainer.appendChild(table);
     }
   </script>
 </body>
